--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "combines class names including dynamic values",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc ./index.ts"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/ronn9419/jss-plugin-combine/issues"
   },
-  "homepage": "https://github.com/ronn9419/jss-plugin-combine#readme"
+  "homepage": "https://github.com/ronn9419/jss-plugin-combine#readme",
+  "devDependencies": {
+    "typescript": "^3.5.3"
+  }
 }
